<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.trydev.games.adeklita.CategoryActivity"
    android:background="@drawable/background2"
    android:padding="16dp"
    >
    <TextView
        android:text="@string/category_title"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textColor="@color/gradient_bottom"
        android:shadowColor="@color/outline_color"
        android:shadowRadius="2"
        android:shadowDy="10"
        android:shadowDx="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutAtas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <!--buah-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/fruit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/cherry_correct"
                    android:onClick="onClick"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/shadow_color"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="1"
                    android:text="@string/fruits"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <!--Binatang-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/animal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/cow" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/shadow_color"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="1"
                    android:text="@string/animal"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutAtas"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/alphabet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/alphabet" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/shadow_color"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="1"
                    android:text="Huruf"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/color"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/colorwheel" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/shadow_color"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="1"
                    android:text="warna"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
